package headfirst.designpatterns.strategy;

/**
 * @author: sjmp1573
 * @date: 2022/4/29 11:17
 * @description:
 */

public class RubberDuck extends Duck{
    @Override
    void display() {
        System.out.println("I'm a rubber duck");
    }
}
